--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 </div>
-{% endfor %}
+{% endmacros %}
 
 {% macro show_jobs(jobs) %}
 <div class="columns is-multiline">
@@ -23,4 +23,4 @@
     <div class="column is-half">
       {{ show_job(job) }}
     </div>
-{% endmacro %}
+{% endfor %}
