--- a/jobs/templates/job.html
+++ b/jobs/templates/job.html
@@ -1,3 +1,6 @@
-{% extends "layout.html" %}
+{% extends "layout.html"
+
 {% block content %}
-{{% macro show_job(job) %}}
+{{% show_job(job) %}}
+
+{% endblock %}
